[package]
name = "teller"
version = "2.0.7"
edition = "2021"

description.workspace = true
authors.workspace = true
documentation = "https://docs.rs/teller/"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
fs-err = "3.2.2"
eyre = "0.6.8"
thiserror = { workspace = true }
tokio = { workspace = true }
# async-trait = "*"
tracing = "^0.1.34"
tracing-tree = { version = "0.4.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
strum = { workspace = true }
proc-macro2 = "1.0.63"                                                  # Remove once https://github.com/rust-lang/rust/issues/113152 is fixed.
clap = { version = "4.3.0", features = ["cargo", "derive"] }
exitcode = { version = "^1.1.2" }
console = { version = "0.16.2" }
comfy-table = { version = "7.1.1" }
dialoguer = { version = "0.12.0" }
teller-providers = { workspace = true }
teller-core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
dockertest-server = { version = "0.1.7", features = ["hashi", "cloud"] }
trycmd = "0.15.11"

[[bin]]
name = "teller"
