[package]
name = "teller-core"
version = "2.0.7"
edition = "2021"
description.workspace = true
authors.workspace = true
documentation = "https://docs.rs/teller-core/"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
serde_variant = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
shell-words = "1"
duct = "1.1.1"
thiserror = { workspace = true }
fs-err = "3.2.2"
ignore = "0.4.22"
unicode-width = "0.2.2"
aho-corasick = { workspace = true }
tera = { workspace = true }
csv = "1.2.1"
teller-providers = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
stringreader = "0.1.1"
