[package]
name = "teller-providers"
version = "2.0.7"
edition = "2021"

description.workspace = true
authors.workspace = true
documentation = "https://docs.rs/teller-providers/"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true


[features]
default = [
    "hashicorp_vault",
    "dotenv",
    "ssm",
    "aws_secretsmanager",
    "google_secretmanager",
    "hashicorp_consul",
    "etcd",
]

ssm = ["aws", "dep:aws-sdk-ssm"]
aws_secretsmanager = ["aws", "dep:aws-sdk-secretsmanager"]
google_secretmanager = ["dep:google-secretmanager1", "dep:crc32c"]
hashicorp_vault = ["dep:vaultrs", "dep:rustify"]
dotenv = ["dep:dotenvy"]
hashicorp_consul = ["dep:rs-consul"]
aws = ["dep:aws-config"]
etcd = ["dep:etcd-client"]

[dependencies]
async-trait = { workspace = true }
lazy_static = { workspace = true }
serde_variant = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
hyper-util = { version = "0.1", features = ["client-legacy"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
fs-err = "3"
home = "0.5"
hyper = "1.8.1"
tokio = "1"
# gcp
google-secretmanager1 = { version = "5.0", optional = true }
crc32c = { version = "0.6", optional = true }
# aws
aws-config = { version = "1.6.3", optional = true }
# aws-ssm
aws-sdk-ssm = { version = "1.78.0", optional = true }
# aws-secretsmanager
aws-sdk-secretsmanager = { version = "1.74.0", optional = true }
# dotenv
dotenvy = { version = "0.15.7", optional = true }
# hashivault
vaultrs = { version = "0.7.4", optional = true }
rustify = { version = "0.6.1", optional = true }
# HashiCorp Consul
rs-consul = { version = "0.13.0", optional = true }

etcd-client = { version = "0.18.0", optional = true }

[dev-dependencies]
insta = { workspace = true }
dockertest-server = { version = "0.1.7", features = ["hashi", "cloud"] }
dockertest = "0.3.0"
tokio = { workspace = true }
test-log = "0.2"
